--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   },
   "scripts": {
     "pwa": "create-pwa --icon=\"icon.png\" --launch=\"icon.png\""
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "open": "^8.0.2",
+    "pug": "^3.0.2"
   }
 }
