--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "open": "^8.0.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^3.1.2"
   }
 }
