Add SMHI API to get temperature info

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "open": "^8.0.2",
     "pug": "^3.0.2",
+    "request-json": "^0.6.5",
     "socket.io": "^3.1.2"
   }
 }
