--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "pwa": "create-pwa --icon=\"icon.png\" --launch=\"icon.png\"",
-    "start": "node start.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
